--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,10 @@
     "app/bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.0.8",
+    "bootstrap-css": "~3.0.0",
+    "jquery": "~2.0.3"
+  }
 }
